[package]
name = "yaac"
version = "1.0.1"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-micro = "^0.11.0"
anyhow = "^1.0"
clap = "^2.33"
env_logger = "^0.9.0"
log = "^0.4.14"
regex_static = "^0.1.1"
thiserror = "^1.0"

