[package]
name = "yaac"
version = "1.0.2"
authors = ["benaryorg <binary@benary.org>"]
edition = "2018"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-micro = "^0.12.0"
anyhow = "^1.0"
clap = "^2.34"
env_logger = "^0.9.0"
log = "^0.4.14"
thiserror = "^1.0"

